syntax = "proto3";

service UserManager {
  rpc GetUsers (UsersRequest) returns (UsersResponse) {}
  rpc GetUser (UserRequest) returns (UserResponse) {}
}

message User {
  uint32 id = 1;
  string name = 2;
  bool is_admin = 3;
}

message UsersResponse {
  repeated User users = 1;
}

message UsersRequest{}

message UserRequest {
  uint32 id = 1;
}

message UserResponse {
  User user = 1;
}
